# MobileContextServer

./: .gitignore  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/example/mobilecontextserver/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/nodejs-project/: main.js  package-lock.json  package.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/mobilecontextserver/: MainActivity.kt
app/src/main/java/com/example/mobilecontextserver/server/: LocalHttpServer.kt
app/src/main/java/com/example/mobilecontextserver/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/mobilecontextserver/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
